--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,19 @@ md-sidenav {
     width: auto;
 }
 
-.md-avatar-icon {
+md-card {
+    overflow: hidden;
+}
+
+md-sidenav .md-avatar-icon {
     font-size: 20px;
     padding: 11px !important;
+}
+
+.fix-icon {
+    width: 36px;
+    text-align: center;
+    font-size: 20px;
 }
 
 .logged-in {
@@ -32,12 +42,19 @@ md-sidenav {
     height: 64px;
 }
 
+.no-margin {
+    margin: 0;
+}
+
 md-dialog .md-toolbar-tools {
     max-height: 100%;
     padding: 0 24px;
     font-size: 28px;
 }
 
+ng-view, ng-view md-card {
+    margin: 12px;
+}
 
 /* Schedule card start */
 *, *:before, *:after {
@@ -45,10 +62,8 @@ md-dialog .md-toolbar-tools {
 }
 
 .card-content {
-    width: 100%;
     height: 100%;
     padding: 0;
-    margin: 0;
     position: relative;
 }
 
@@ -60,8 +75,6 @@ md-dialog .md-toolbar-tools {
 
 .day.as-hours-head {
     width: 5%;
-    border-top-left-radius: 2px;
-    border-bottom-left-radius: 2px;
 }
 
 .day-label {
@@ -89,7 +102,6 @@ md-dialog .md-toolbar-tools {
     height: 5%;
     width: calc(95% + 1px);
     margin-left: calc(5% - 1px);
-    border-top-right-radius: 2px;
 }
 
 .hour-label {
