--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -14,3 +14,11 @@
 .align-right .md-caption {
     color: rgba(0, 0, 0, .54);
 }
+
+.limited-width .md-list-item-inner {
+    width: 80% !important;
+}
+
+.limited-width .md-avatar-icon {
+        min-width: 36px;
+}
