--- a/css/schedule.css
+++ b/css/schedule.css
@@ -15,6 +15,7 @@ md-card md-card-content {
 }
 
 .day-label {
+    z-index: 2;
     position: absolute;
     width: 19%;
     height: 5%;
@@ -36,6 +37,7 @@ md-card md-card-content {
 }
 
 .hour.as-days-head {
+    z-index: 1;
     height: 5%;
     width: calc(95% + 1px);
     margin-left: calc(5% - 1px);
@@ -65,7 +67,7 @@ md-card md-card-content {
     box-shadow: inset 0 0 10rem 2rem rgba(255, 255, 255, 0.1);
 }
 
-.course-name {
+.course-title {
     font-weight: 500;
 }
 
