--- a/css/calendar.css
+++ b/css/calendar.css
@@ -3,11 +3,17 @@ calendar-md {
 }
 
 .breadcrumb {
+    overflow: visible;
+    font-size: 14px;
     background-color: lightgrey;
     border-radius: 16px;
-    height: 32px;
-    line-height: 32px;
-    margin: 8px 8px 0 0;
-    padding: 0 12px !important;
+    height: auto;
+    line-height: auto;
+    margin: -8px -8px -8px -4px;
+    padding: 6px 10px !important;
     float: left;
+}
+
+div[tabindex] {
+    padding-bottom: 0;
 }
