Delete Hardcoded Data & Add Trailing Slashs To Avoid Redirects

--- a/css/courses.css
+++ b/css/courses.css
@@ -14,3 +14,9 @@ md-input-container.md-block.md-input-focused label {
     width: 42px;
     height: 42px;
 }
+
+md-fab-speed-dial {
+    position: absolute;
+    right: -8px;
+    bottom: -8px;
+}
