--- a/css/layout.css
+++ b/css/layout.css
@@ -98,8 +98,10 @@ md-dialog p {
 
 .fix-icon {
     width: 36px;
+    height: 36px;
     text-align: center;
     font-size: 20px;
+    margin-top: 8px !important;
 }
 
 .no-margin {
