--- a/css/layout.css
+++ b/css/layout.css
@@ -99,6 +99,7 @@ md-dialog p {
 .fix-icon {
     width: 36px;
     height: 36px;
+    line-height: 36px;
     text-align: center;
     font-size: 20px;
     margin-top: 8px !important;
