--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -43,12 +43,16 @@ md-list-item.removeable {
     padding-right: 0;
 }
 
-md-list-item.removeable:hover {
-    background-color: rgba(160, 160, 160, 0.25);
+md-list-item.removeable:hover, [account]:hover {
+    background-color: rgba(160, 160, 160, .25);
+}
+
+.removeable, [account] {
+    transition: background-color .4s cubic-bezier(.25, .8, .25, 1);
 }
 
 .removeable > .md-secondary-container {
-    transition: width ease 0.2s;
+    transition: width ease .2s;
     overflow: hidden;
     width: 16px;
 }
