--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -70,3 +70,14 @@ md-list-item.removeable:hover, [account]:hover {
     bottom: 1;
     top: 1;
 }
+
+.md-nav-item:first-of-type {
+    margin-left: 0;
+}
+
+.md-button._md-nav-button {
+    min-width: 0;
+    width: 100%;
+    margin: 0;
+    padding: 12px 0;
+}
