Tweak The Top-Bar For Better Small Screen Sizes Support

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -21,3 +21,8 @@ md-content.agenda .breadcrumb {
 div[tabindex] {
     padding-bottom: 0;
 }
+
+calendar-md md-content > md-content.agenda > * > * :first-child {
+    width: 60px;
+    text-align: left;
+}
