--- a/css/schedule.css
+++ b/css/schedule.css
@@ -21,7 +21,7 @@ md-card md-card-content.fill-card {
     height: 5%;
     top: 1%;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 18px;
     font-weight: 300;
 }
 
@@ -47,31 +47,66 @@ md-card md-card-content.fill-card {
     position: absolute;
     width: 5%;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 18px;
     font-weight: 300;
 }
 
 .class {
     width: calc(19% - 1px);
     position: absolute;
-    padding: 0.5rem 0.5rem 0.7rem 0.7rem;
+    padding: 8px 10px;
     color: #fff;
     cursor: pointer;
     overflow: hidden;
     word-wrap: break-word;
-    box-shadow: inset 0 0 10rem 2rem rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 0 150px 30px rgba(0, 0, 0, 0.1);
     border-radius: 2px;
 }
 
 .class:hover {
-    box-shadow: inset 0 0 10rem 2rem rgba(255, 255, 255, 0.1);
+    box-shadow: inset 0 0 150px 30px rgba(200, 200, 200, 0.1);
 }
 
-.course-title {
-    font-weight: 500;
+.class div {
+    margin-bottom: 2px;
+}
+
+.class md-icon {
+    width: 16px;
+    height: 16px;
+    line-height: 14px;
+    min-width: 0;
+    min-height: 0;
 }
 
 .classes-container,
 .class, .hour, .day {
     box-sizing: inherit;
+}
+
+@media (max-width: 599px) {
+    .class {
+        padding: 2px 4px;
+        word-break: break-all;
+        word-wrap: normal;
+    }
+    .class div {
+        margin-bottom: 0;
+    }
+    .hour-label, .day-label, .class, md-dialog p {
+        font-size: 14px;
+    }
+    md-dialog .course-info-icons md-icon {
+        font-size: 16px;
+        margin-right: 4px;
+    }
+    md-dialog .md-toolbar-tools {
+        padding: 0 12px;
+    }
+    md-dialog .layout-margin {
+        margin: 2px !important;
+    }
+    md-dialog .layout-margin > * {
+        margin: 4px;
+    }
 }
