--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,7 @@
+html {
+    zoom: 0.8;
+}
+
 [ng-click] {
     cursor: pointer;
 }
@@ -109,7 +113,6 @@ md-card {
 }
 
 md-dialog .md-toolbar-tools {
-    max-height: 100%;
     padding: 0 24px;
 }
 
