Add A Background Pattern Of UOSHUB Logo To The Welcome Page

--- a/css/welcome.css
+++ b/css/welcome.css
@@ -18,3 +18,27 @@
     line-height: 30px;
     margin-bottom: 36px;
 }
+
+.background-pattern {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+.background-pattern i {
+    background: url(/static/img/pattern.png);
+    -webkit-transform: rotate(-15deg);
+    -moz-transform: rotate(-15deg);
+    -ms-transform: rotate(-15deg);
+    -o-transform: rotate(-15deg);
+    transform: rotate(-15deg);
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    opacity: 0.1;
+}
