--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -87,6 +87,7 @@ md-list-item.removeable:hover, [account]:hover {
     text-transform: capitalize;
 }
 
-.md-button._md-nav-button.md-active md-icon {
-    color: #ffffffde;
+.md-button._md-nav-button.md-active md-icon,
+.md-button._md-nav-button.md-active {
+    color: #66bb6a !important;
 }
