Use Special Text Commas And Reduce Zoom On Small Screens

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -56,7 +56,7 @@ md-list-item.removeable:hover, [account]:hover {
 }
 
 .archived {
-    opacity: 0.5;
+    opacity: .5;
 }
 
 .archived > .md-secondary-container {
