--- a/css/schedule.css
+++ b/css/schedule.css
@@ -59,12 +59,12 @@ md-card md-card-content.fill-card {
     cursor: pointer;
     overflow: hidden;
     word-wrap: break-word;
-    box-shadow: inset 0 0 150px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 0 150px 30px rgba(0, 0, 0, .1);
     border-radius: 2px;
 }
 
 .class:hover {
-    box-shadow: inset 0 0 150px 30px rgba(200, 200, 200, 0.1);
+    box-shadow: inset 0 0 150px 30px rgba(200, 200, 200, .1);
 }
 
 .class div {
