--- a/css/courses.css
+++ b/css/courses.css
@@ -29,3 +29,16 @@ md-list-item.documents>div.md-button:first-child {
     max-width: 56px;
     min-width: 56px;
 }
+
+iframe {
+    display: none;
+}
+
+#docs-all {
+    margin-right: 14px;
+    margin-left: 8px;
+}
+
+#docs-all:not(.md-checked) .md-icon {
+    border-color: #ffffffc0;
+}
