--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -86,3 +86,15 @@ md-list-item.removeable:hover, [account]:hover {
     padding: 10px 0 6px;
     text-transform: capitalize;
 }
+
+.update-body {
+    transition: max-height .5s ease-in-out;
+    max-height: 0;
+    overflow: hidden;
+    padding-left: 24px;
+    padding-right: 16px;
+    background-color: #c8e6c9  ;
+    box-shadow: inset 4px 1px 4px 0 rgba(0, 0, 0, .2),
+                inset 4px -1px 3px 0 rgba(0, 0, 0, .14),
+                inset 4px 2px 2px -1px rgba(0, 0, 0, .12);
+}
